# ClawTrading

./: .env.example  .gitignore  BUILD_SUMMARY.md  PROJECT_PHASES.md  README.md  dashboard.html  deploy.sh  next.config.ts  nginx.conf  night-trader.service  package-lock.json  package.json  tsconfig.json
app/: globals.css  layout.tsx  page.tsx
app/api/chart/: route.ts
app/api/engine/: route.ts
app/api/fear-greed/: route.ts
app/api/news/: route.ts
app/components/: FearGreedPanel.tsx  MarketScanner.tsx  NewsPanel.tsx  PerformanceStats.tsx  PriceTile.tsx  SignalPanel.tsx  TradingChart.tsx  TradingViewChart.tsx
app/dashboard/: page.tsx
app/learning/: page.tsx
app/scalper/: page.tsx
bot/: config.py  convex_client.py  data_fetcher.py  learning_engine.py  main.py  news_engine.py  requirements.txt  revolutionary_scalper.py  risk_manager.py  run.sh  signal_generator.py
convex/: mutations.ts  queries.ts  schema.ts
convex/_generated/: dataModel.d.ts  server.d.ts
future-phases/phase-2-observer/: README.md
future-phases/phase-3-platform/: README.md
lib/: types.ts
lib/data/: pipeline.ts
lib/engine/: README.md  main.ts
lib/indicators/: index.ts
lib/learning/: engine.ts
lib/polymarket/: api-types.ts  arbitrage.ts  client.ts  index.ts
lib/risk/: manager.ts
lib/strategies/: ensemble.ts  index.ts
lib/types/: config.ts  index.ts
rust-indexer/: Cargo.toml  README.md  TASK_REPORT.md
rust-indexer/src/: main.rs
scripts/: clawtrade-sync.service  setup-local-hooks.sh  sync-watcher.sh  vps-setup.sh
services/: rust-indexer.placeholder.ts
(+7 files in other folders)
