[package]
name = "rust-indexer"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy = { version = "1.6.1", features = ["full"] }
dotenv = "0.15.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio"] }
tokio = { version = "1.49.0", features = ["full"] }
